--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 	<script src="keyboard.js"></script>
 	<script src="game.js"></script>
 	<script src="engine.js"></script>
+	<script src="lib/newgroundsio.min.js"></script>
+	<script src="ng.js"></script>
 	<body style="margin: 0;">
 		<div class="flex-container">
 			<div class="row">
